adding workshop doc

--- a/GPT4o/Parcel sorting with GPT4o and functions.ipynb
+++ b/GPT4o/Parcel sorting with GPT4o and functions.ipynb
@@ -17,11 +17,10 @@
     "GPT4o_DEPLOYMENT_ENDPOINT = os.getenv(\"GPT4o_DEPLOYMENT_ENDPOINT\")\n",
     "GPT4o_DEPLOYMENT_NAME = os.getenv(\"GPT4o_DEPLOYMENT_NAME\")\n",
     "\n",
-    "\n",
     "client = AzureOpenAI(\n",
     "  azure_endpoint = GPT4o_DEPLOYMENT_ENDPOINT, \n",
     "  api_key=GPT4o_API_KEY,  \n",
-    "  api_version=\"2024-02-01\"\n",
+    "  api_version=\"2024-05-13\"\n",
     ")"
    ]
   },
@@ -214,7 +213,7 @@
      "output_type": "stream",
      "text": [
       "Recommended Function call:\n",
-      "ChatCompletionMessageToolCall(id='call_X5agHI7BOOKRM539Onli0W18', function=Function(arguments='{\"location\":\"United States\"}', name='ship_to_US'), type='function')\n",
+      "ChatCompletionMessageToolCall(id='call_bbIE7847HQkzA6Ki7U9Cdo6W', function=Function(arguments='{\\n  \"location\": \"United States\"\\n}', name='ship_to_US'), type='function')\n",
       "\n",
       "Output of function call:\n",
       "Shipping to Americas based on location United States\n",
@@ -236,7 +235,7 @@
      "output_type": "stream",
      "text": [
       "Recommended Function call:\n",
-      "ChatCompletionMessageToolCall(id='call_X5agHI7BOOKRM539Onli0W18', function=Function(arguments='{\"location\":\"United States\"}', name='ship_to_US'), type='function')\n",
+      "ChatCompletionMessageToolCall(id='call_NV2ZAHnwfnkPo9nzEfWEcIUG', function=Function(arguments='{\"location\":\"United States\"}', name='ship_to_US'), type='function')\n",
       "\n",
       "Output of function call:\n",
       "Shipping to Americas based on location United States\n",
@@ -258,7 +257,7 @@
      "output_type": "stream",
      "text": [
       "Recommended Function call:\n",
-      "ChatCompletionMessageToolCall(id='call_X5agHI7BOOKRM539Onli0W18', function=Function(arguments='{\"location\":\"United States\"}', name='ship_to_US'), type='function')\n",
+      "ChatCompletionMessageToolCall(id='call_bbIE7847HQkzA6Ki7U9Cdo6W', function=Function(arguments='{\"location\":\"United States\"}', name='ship_to_US'), type='function')\n",
       "\n",
       "Output of function call:\n",
       "Shipping to Americas based on location United States\n",
@@ -280,7 +279,7 @@
      "output_type": "stream",
      "text": [
       "Recommended Function call:\n",
-      "ChatCompletionMessageToolCall(id='call_X5agHI7BOOKRM539Onli0W18', function=Function(arguments='{\"location\":\"Australia\"}', name='ship_to_Oceania'), type='function')\n",
+      "ChatCompletionMessageToolCall(id='call_J9gRzUU6pPgagw9jb2v84nCB', function=Function(arguments='{\"location\":\"Australia\"}', name='ship_to_Oceania'), type='function')\n",
       "\n",
       "Output of function call:\n",
       "Shipping to Oceania based on location Australia\n",
@@ -302,7 +301,7 @@
      "output_type": "stream",
      "text": [
       "Recommended Function call:\n",
-      "ChatCompletionMessageToolCall(id='call_X5agHI7BOOKRM539Onli0W18', function=Function(arguments='{\"location\":\"Germany\"}', name='ship_to_Europe'), type='function')\n",
+      "ChatCompletionMessageToolCall(id='call_XU1JK7oeLIOYKk8KWCWpm0HP', function=Function(arguments='{\"location\":\"Germany\"}', name='ship_to_Europe'), type='function')\n",
       "\n",
       "Output of function call:\n",
       "Shipping to Europe based on location Germany\n",
@@ -324,7 +323,7 @@
      "output_type": "stream",
      "text": [
       "Recommended Function call:\n",
-      "ChatCompletionMessageToolCall(id='call_X5agHI7BOOKRM539Onli0W18', function=Function(arguments='{\"location\":\"Australia\"}', name='ship_to_Oceania'), type='function')\n",
+      "ChatCompletionMessageToolCall(id='call_NV2ZAHnwfnkPo9nzEfWEcIUG', function=Function(arguments='{\"location\":\"Australia\"}', name='ship_to_Oceania'), type='function')\n",
       "\n",
       "Output of function call:\n",
       "Shipping to Oceania based on location Australia\n",
@@ -370,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
